--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,13 @@
 $bg-color: #e4f0f6;
 $color-light: #ffffff;
 
+/* Social Networks Colors */
+
+$facebook: #3b5998;
+$twitter: #55acee;
+$google-plus: #dd4b39;
+$linkedin: #007bb5;
+
 /* Distances */
 
 $main-gap: 1rem;
