--- a/src/components/Auth/auth.scss
+++ b/src/components/Auth/auth.scss
@@ -1,66 +1,11 @@
 @import '../../assets/styles/variables.scss';
+@import '../../assets/styles/mixins.scss';
 
 .auth-form {
-    padding: 0 $main-gap $main-gap;
-    background: $color-light;
+    padding: $main-gap;
+    @include background-opacity($color-light, 0.5);
     border-radius: 4px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 
                 0 3px 6px rgba(0, 0, 0, 0.23);
                 // 0 5px 15px rgba(0,0,0,0.5)
-    .auth-form-fieldset {
-        margin-bottom: 0;
-        .colorgraph {
-            margin: $main-gap 0;
-            height: 5px;
-            border-top: 0;
-            background: #c4e17f;
-            border-radius: 5px;
-            background-image: linear-gradient(to right, #c4e17f, 
-                                                        #c4e17f 12.5%, 
-                                                        #f7fdca 12.5%, 
-                                                        #f7fdca 25%, 
-                                                        #fecf71 25%, 
-                                                        #fecf71 37.5%, 
-                                                        #f0776c 37.5%, 
-                                                        #f0776c 50%, 
-                                                        #db9dbe 50%, 
-                                                        #db9dbe 62.5%, 
-                                                        #c49cde 62.5%, 
-                                                        #c49cde 75%, 
-                                                        #669ae1 75%,
-                                                        #669ae1 87.5%, 
-                                                        #62c2e4 87.5%, 
-                                                        #62c2e4);
-        }
-    }
 }
-// .auth-container {
-//     width: 600px;
-// }
-
-// label {
-//     font-weight: 300;
-// }
-
-// .panel {
-//     border-radius: 5px;
-//     &.panel-login {
-//         border: none;
-//         box-shadow: 0px 0px 49px 14px rgba(188, 190, 194, 0.39);
-//     }
-//     .panel-login .checkbox input[type=checkbox] {
-//         margin-left: 0px;
-//     }
-//     .panel-login .checkbox label {
-//         padding-left: 25px;
-//         font-weight: 300;
-//         display: inline-block;
-//         position: relative;
-//     }
-//      .panel-login .checkbox {
-//       padding-left: 20px;
-//      }
-// }
-
-
-
