--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,8 @@
-$bg-color: #e4f0f6;
+$bg-primary: #f8f9f9;
 $color-light: #ffffff;
+$nav-links-color: #4d4d4d;
+$nav-link-active-bg: #e2e4e6;
+$form-group-bg: #edeff0;
 
 /* Social Networks Colors */
 
@@ -7,6 +10,16 @@ $facebook: #3b5998;
 $twitter: #55acee;
 $google-plus: #dd4b39;
 $linkedin: #007bb5;
+
+/* Buttons Gradients */
+
+$btn-enter-from: #59AC43;
+$btn-enter-to: #509838;
+
+/* Buttons Shadows */
+
+$btn-enter-shadow: #3f6f21;
+$nav-link-active-shadow: #cdd2d4;
 
 /* Distances */
 
