--- a/src/components/Auth/auth.scss
+++ b/src/components/Auth/auth.scss
@@ -3,7 +3,7 @@
 
 .auth-form {
     padding: $main-gap;
-    background: $color-light;
+    background: $bg-primary;
     // @include background-opacity($color-light, 0.5);
     border-radius: 4px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 
