add registration form

--- a/src/components/BoardPage/BoardButton/BoardForm/BoardForm.scss
+++ b/src/components/BoardPage/BoardButton/BoardForm/BoardForm.scss
@@ -1,5 +1,5 @@
 .board-form {
-    width: 100%;
+    width: 265px;
     position: absolute;
     left: 0px;
     top: 0px;
@@ -26,6 +26,7 @@
         }
     }
     .board-name {
+        font-size: 12px;
         margin-top: 20px;
         margin-bottom: 20px;
     }
