--- a/src/containers/App/app.scss
+++ b/src/containers/App/app.scss
@@ -36,7 +36,7 @@ body {
                 right: 0;
                 bottom: 0;
                 left: 0;
-                background: rgba(0, 0, 0, 0.8);
+                background: rgba(0, 0, 0, 0.7);
                 color: #fff;
             }
         }
@@ -156,6 +156,10 @@ body {
             &.active {
                 background: $nav-link-active-bg;
                 box-shadow: 0 2px 0 $nav-link-active-shadow;
+            }
+            &:hover {
+                color: $nav-links-color;
+                cursor: pointer;
             }
         }
     }
