--- a/src/components/Auth/SignIn/signin.scss
+++ b/src/components/Auth/SignIn/signin.scss
@@ -1,5 +1,5 @@
-@import '../../assets/styles/variables.scss';
-@import '../../assets/styles/mixins.scss';
+@import '../../../assets/styles/variables.scss';
+@import '../../../assets/styles/mixins.scss';
 
 .auth-form-fieldset {
     margin-bottom: 0;
