add server side

--- a/client/src/containers/App/app.scss
+++ b/client/src/containers/App/app.scss
@@ -29,7 +29,7 @@ body {
             background: url('../../assets/images/pexels-photo-373599.jpg');
             background-size: cover;
             background-position: top center;
-            .auth-container-overlay {
+            .overlay {
                 height: inherit;
                 position: absolute;
                 top: 0;
