--- a/client/src/components/SignIn/signin.scss
+++ b/client/src/components/SignIn/signin.scss
@@ -1,5 +1,5 @@
-@import '../../../assets/styles/variables.scss';
-@import '../../../assets/styles/mixins.scss';
+@import '../../assets/styles/variables.scss';
+@import '../../assets/styles/mixins.scss';
 
 .auth-form-fieldset {
     margin-bottom: 0;
@@ -28,5 +28,5 @@
     }
 }
 .error {
-    border-color: red !important;
+    color: red;
 }
