--- a/client/src/containers/App/app.scss
+++ b/client/src/containers/App/app.scss
@@ -1,46 +1,45 @@
 @import "~bootstrap/scss/bootstrap.scss";
-@import '../../components/BoardPage/Header/header.scss';
+@import '../../components/Header/header.scss';
 @import '../../assets/styles/variables.scss';
 @import '../../assets/styles/mixins.scss';
 
 /* Font Awesome */
-
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
-
 * {
     margin: 0px;
     padding: 0px;
 }
 
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
 }
 
-// body {
-//     // background-color: $bg-color;
-// }
-
-body {
-    &.auth-page {
-        #app {
-            height: inherit;
-            background: url('../../assets/images/pexels-photo-373599.jpg');
-            background-size: cover;
-            background-position: top center;
-            .overlay {
-                height: inherit;
-                position: absolute;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
-                background: rgba(0, 0, 0, 0.7);
-                color: #fff;
-            }
-        }
+#app {
+    height: inherit;
+    background: url('../../assets/images/pexels-photo-373599.jpg');
+    background-size: cover;
+    background-position: top center;
+    .overlay {
+        height: inherit;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.7);
+        color: #fff;
     }
+}
+
+.auth-form {
+    padding: $main-gap;
+    background: $bg-primary;
+    border-radius: 4px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 
+                0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .btn {
@@ -48,28 +47,24 @@ body {
         cursor: pointer;
     }
 }
+
 .btn-enter {
-    background: linear-gradient(to bottom,
-        $btn-enter-from 0, 
-        $btn-enter-to 100%);
+    background: linear-gradient(to bottom, $btn-enter-from 0, $btn-enter-to 100%);
     color: $color-light;
     border: none;
     box-shadow: 0 2px 0 $btn-enter-shadow;
     &:hover {
-        background: linear-gradient(to bottom, 
-            darken($btn-enter-from, 5%) 0, 
-            darken($btn-enter-to, 5%) 100%);
+        background: linear-gradient(to bottom, darken($btn-enter-from, 5%) 0, darken($btn-enter-to, 5%) 100%);
         box-shadow: 0 2px 0 darken($btn-enter-shadow, 5%);
     }
     &:focus {
         box-shadow: 0 2px 0 $btn-enter-shadow;
     }
     &:active {
-        background: linear-gradient(to bottom,
-            $btn-enter-from 0, 
-            $btn-enter-to 100%);
+        background: linear-gradient(to bottom, $btn-enter-from 0, $btn-enter-to 100%);
     }
 }
+
 .btn-google-plus {
     background: $google-plus;
     box-shadow: 0 2px 0 darken($google-plus, 15%);
@@ -81,6 +76,7 @@ body {
         box-shadow: 0 2px 0 darken($google-plus, 25%);
     }
 }
+
 .btn-facebook {
     background: $facebook;
     box-shadow: 0 2px 0 darken($facebook, 15%);
@@ -92,6 +88,7 @@ body {
         box-shadow: 0 2px 0 darken($facebook, 25%);
     }
 }
+
 .btn-twitter {
     background: $twitter;
     box-shadow: 0 2px 0 darken($twitter, 15%);
@@ -103,6 +100,7 @@ body {
         box-shadow: 0 2px 0 darken($twitter, 25%);
     }
 }
+
 .btn-linkedin {
     background: $linkedin;
     box-shadow: 0 2px 0 darken($linkedin, 15%);
@@ -114,12 +112,14 @@ body {
         box-shadow: 0 2px 0 darken($linkedin, 25%);
     }
 }
+
 .btn-google-plus,
 .btn-facebook,
 .btn-twitter,
 .btn-linkedin {
     color: $color-light;
 }
+
 .btn-social-login,
 .btn-google-plus,
 .btn-facebook,
@@ -129,12 +129,14 @@ body {
         margin-right: 10px;
     }
 }
+
 .btn-social-login,
 .btn-go-back {
     &:focus {
         box-shadow: none;
     }
 }
+
 .form-group {
     &.form-group-custom {
         .form-control {
@@ -144,7 +146,7 @@ body {
             &:focus {
                 border: 1px solid $nav-link-active-shadow;
                 background: $color-light;
-            }  
+            }
         }
     }
 }
