--- a/client/src/containers/App/app.scss
+++ b/client/src/containers/App/app.scss
@@ -19,7 +19,8 @@ body {
 
 #app {
     height: inherit;
-    background: url('../../assets/images/pexels-photo-373599.jpg');
+    // background: url('../../assets/images/pexels-photo-373599.jpg');
+    background-color: #fff;
     background-size: cover;
     background-position: top center;
     .overlay {
