--- a/client/src/components/BoardPage/boardPage.scss
+++ b/client/src/components/BoardPage/boardPage.scss
@@ -6,5 +6,8 @@
             cursor: pointer;
             padding: 40px 60px;
         }
+        .list-wrap {
+            margin-top: 20px;
+        }
     }
 }
