--- a/client/src/containers/ListContainer/listContainer.scss
+++ b/client/src/containers/ListContainer/listContainer.scss
@@ -1,7 +1,7 @@
-$list-page-bg: #0078bf;
-body  {
-    background-color: $list-page-bg;
-}
+// $list-page-bg: #0078bf;
+// body  {
+//     background-color: $list-page-bg;
+// }
 .list-page {
     padding-top: 20px;
 }
