--- a/client/src/containers/ListContainer/listContainer.scss
+++ b/client/src/containers/ListContainer/listContainer.scss
@@ -14,3 +14,14 @@ body  {
     vertical-align: top;
     white-space: nowrap;
 }
+.list-container {
+    .close {
+        outline: none;
+        cursor: pointer;
+        float: none;
+        font-size: 2.5rem;
+        display: inline-block;
+        vertical-align: middle;
+        margin: 0 10px;
+    }
+}
