--- a/client/src/containers/App/app.scss
+++ b/client/src/containers/App/app.scss
@@ -19,13 +19,10 @@ body {
 
 #app {
     .overlay {
-        height: inherit;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background: rgba(0, 0, 0, 0.7);
+        display: flex;
+        align-items: center;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.25);
         color: #fff;
     }
 }
