add card adding logic and delete board icon

--- a/client/src/components/BoardPage/BoardCard/BoardCard.scss
+++ b/client/src/components/BoardPage/BoardCard/BoardCard.scss
@@ -10,4 +10,7 @@
             background: darken($bg-green, 5%);
         }
     }
+    .delete-icon {
+        color: rgba(127, 77, 77, 0.87);
+    }
 }
