--- a/client/src/containers/ListPage/listPage.scss
+++ b/client/src/containers/ListPage/listPage.scss
@@ -25,7 +25,7 @@
     vertical-align: top;
     white-space: nowrap;
 }
-.list-container {
+.list-container, .list-controlls {
     .close {
         outline: none;
         cursor: pointer;
