--- a/client/src/components/BoardPage/BoardCard/BoardCard.scss
+++ b/client/src/components/BoardPage/BoardCard/BoardCard.scss
@@ -1,6 +1,7 @@
 @import '../../../assets/styles/variables';
 
 .board-card {
+    position: relative;
     font-weight: bold;
     margin-bottom: 20px;
     overflow: hidden;
@@ -18,6 +19,7 @@
     }
     .delete-icon {
         right: 8px;
-        transform: translateY(-32px);
+        bottom: 8px;
+        transform: translateY(32px);
     }
 }
