--- a/client/src/components/TitleForm/titleForm.scss
+++ b/client/src/components/TitleForm/titleForm.scss
@@ -1,4 +1,4 @@
-.board-form {
+.title-form {
     width: 100%;
     position: absolute;
     left: 0px;
@@ -25,7 +25,7 @@
             cursor: pointer;
         }
     }
-    .board-name {
+    .title-name {
         font-size: 12px;
         margin-top: 20px;
         margin-bottom: 20px;
