--- a/client/src/components/Modal/modal.scss
+++ b/client/src/components/Modal/modal.scss
@@ -1,4 +1,5 @@
 $color-overlay: #000000;
+$bg-window: #edeff0;
 
 .modal-overlay {
     position: fixed;
@@ -12,4 +13,13 @@ $color-overlay: #000000;
     background: transparentize($color-overlay, 0.4);
     overflow-y: auto;
     z-index: 20;
+    .modal-window {
+        position: relative;
+        padding: 15px;
+        margin: 5% 0 10%;
+        background: $bg-window;
+        border-radius: 2px;
+        overflow: hidden;
+        z-index: 20;
+    }
 }
