--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -30,3 +30,8 @@ $main-gap: 1rem;
 $bg-green: #00aecc;
 $bg-button-create: #E2E4E6;
 $color-button-create: #838c91;
+
+/* Icons */
+
+$icon-dark: rgba(#000000, 0.4);
+$icon-dark-active: rgba(#000000, 0.7);
