--- a/client/src/components/Modal/modal.scss
+++ b/client/src/components/Modal/modal.scss
@@ -16,10 +16,16 @@ $bg-window: #edeff0;
     .modal-window {
         position: relative;
         padding: 15px;
-        margin: 5% 0 10%;
+        margin: 54px 0 0;
+        min-width: 360px;
         background: $bg-window;
         border-radius: 2px;
         overflow: hidden;
         z-index: 20;
+        .modal-icon-close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
     }
 }
