--- a/client/src/containers/App/app.scss
+++ b/client/src/containers/App/app.scss
@@ -6,6 +6,21 @@
 /* Font Awesome */
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
+
+/* Material Icons Font */
+
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../../assets/fonts/MaterialIcons-Regular.eot');
+    src: local('Material Icons'),
+         local('MaterialIcons-Regular'),
+         url('../../assets/fonts/MaterialIcons-Regular.woff2') format('woff2'),
+         url('../../assets/fonts/MaterialIcons-Regular.woff') format('woff'),
+         url('../../assets/fonts/MaterialIcons-Regular.ttf') format('truetype');
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -25,6 +40,28 @@ body {
         background: rgba(0, 0, 0, 0.25);
         color: #fff;
     }
+}
+
+.hidden {
+    display: none;
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: 'liga';
 }
 
 .auth-form {
@@ -170,8 +207,13 @@ body {
     }
 }
 
-.close-icon {
+.icon-close {
+    color: $icon-dark;
+    transition: color 0.15s linear;
     cursor: pointer;
+    &:hover {
+        color: $icon-dark-active;
+    }
 }
 
 @media screen and (max-width: 340px) {
