--- a/client/src/components/BoardPage/BoardCard/BoardCard.scss
+++ b/client/src/components/BoardPage/BoardCard/BoardCard.scss
@@ -1,10 +1,24 @@
 @import '../../../assets/styles/variables';
 
 .board-card {
-    position: relative;
+    margin-bottom: 15px;
+    display: block;
+    width: 295px;
     font-weight: bold;
-    margin-bottom: 20px;
     overflow: hidden;
+    min-height: 95px;
+    width: 100%;
+    font-size: 14px;
+    background: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+    position: relative;
+    resize: none;
+    outline: none;
+    z-index: 0;
+    box-shadow: 0px 1px 3px 0px rgba(50, 50, 50, 0.2);
+    transition: box-shadow 0.2s linear;
+    transition: background 0.2s linear;
     &.bg-card {
         background: $bg-green;
         text-decoration: none;
