--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -1,3 +1,53 @@
-.card {
-    width: 96%;
+.card, .card-info__title  {
+    min-height: 80px;
+    width: 100%;
+    font-size: 14px;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-bottom: 6px;
+    position: relative;
+    resize: none;
+    outline: none;
+    z-index: 0;
+    box-shadow: 0px 1px 3px 0px rgba(50, 50, 50, 0.2);
+    transition: box-shadow 0.2s linear;
+    transition: background 0.2s linear;
+    &:hover {
+        background: #f3f4f5;
+        box-shadow: 0px 1px 4px 0px rgba(50, 50, 50, 0.4);
+        .edit-icon {
+            display: block !important;
+            border-radius: 3px !important; 
+        }
+    }
+    .card__wrap {
+        padding: 8px;
+        min-height: 80px;
+        box-sizing: border-box;
+    }
+    .edit-icon {
+        color: rgb(110, 110, 110) !important;
+        height: 14px !important;
+        width: 20px !important;
+        position: absolute !important;
+        right: 10px !important;
+        top: 10px !important;
+        display: none !important;
+    }
 }
+.card-info__title {
+    &:hover {
+        background: #fff;
+    }
+}
+.card-info {
+    .card-info__title {
+        overflow: hidden;
+        padding: 6px 6px 2px 8px;
+        position: relative;
+        z-index: 10;
+    }
+}
+
