--- a/client/src/components/BoardPage/BoardButton/BoardForm/BoardForm.scss
+++ b/client/src/components/BoardPage/BoardButton/BoardForm/BoardForm.scss
@@ -8,6 +8,8 @@
     box-sizing: border-box;
     padding: 10px;
     display: none;
+    border: 1px solid #d6dadc;
+    box-shadow: 0 1px 6px rgba(0,0,0,.15);
     &.open {
         display: block;
     }
