--- a/client/src/components/TitleForm/titleForm.scss
+++ b/client/src/components/TitleForm/titleForm.scss
@@ -7,6 +7,8 @@
     background-color: #fff;
     box-sizing: border-box;
     padding: 10px;
+    border: 1px solid #d6dadc;
+    box-shadow: 0 1px 6px rgba(0,0,0,.15);
     display: none;
     &.open {
         display: block;
