file uploading in progress

--- a/client/src/components/List/CreateListButton/addListButton.scss
+++ b/client/src/components/List/CreateListButton/addListButton.scss
@@ -1,5 +1,6 @@
 .add-list-container {
     position: relative;
+    display: inline-block;
     .add-list-btn {
         border-radius: 3px;
         cursor: pointer;
