--- a/client/src/components/List/list.scss
+++ b/client/src/components/List/list.scss
@@ -48,3 +48,11 @@
         text-decoration: underline;
     }
 }
+
+.dropzone-container {
+    height: 100%;
+    display: inline-block;
+    vertical-align: top;
+    box-sizing: border-box;
+    margin: 0 5px;
+}
