--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -1,26 +1,24 @@
+$color-border: #ccc;
+
 .card, .card-info__title  {
-    min-height: 80px;
     width: 100%;
     font-size: 14px;
     background: #fff;
-    border: 1px solid #ccc;
+    border: 0;
+    border-bottom: 1px solid $color-border;
     border-radius: 3px;
     cursor: pointer;
-    margin-bottom: 6px;
     position: relative;
     resize: none;
     outline: none;
     z-index: 0;
     color: #4d4d4d;
     text-decoration: none;
-    box-shadow: 0px 1px 3px 0px rgba(50, 50, 50, 0.2);
-    transition: box-shadow 0.2s linear;
     transition: background 0.2s linear;
     &:hover {
         background: #f3f4f5;
         color: #4d4d4d;
         text-decoration: none;
-        box-shadow: 0px 1px 4px 0px rgba(50, 50, 50, 0.4);
         .edit-icon {
             display: block !important;
             border-radius: 3px !important; 
@@ -28,7 +26,6 @@
     }
     .card__wrap {
         padding: 8px;
-        min-height: 80px;
         box-sizing: border-box;
     }
     .edit-icon {
@@ -42,6 +39,7 @@
     }
 }
 .card-info__title {
+    min-height: 80px;
     &:hover {
         background: #fff;
     }
