image preview and attachments added

--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -3,6 +3,7 @@ $color-light: #ffffff;
 $nav-links-color: #4d4d4d;
 $nav-link-active-bg: #e2e4e6;
 $form-group-bg: #edeff0;
+$color-primary: #333333;
 
 /* Social Networks Colors */
 
