--- a/client/src/components/Card/EditModal/editModal.scss
+++ b/client/src/components/Card/EditModal/editModal.scss
@@ -11,12 +11,12 @@
         position: absolute;
     }
     .edit-modal__title {
-        padding: 8px;
+        padding: 5px 8px 6px;
         min-height: 80px;
         width: 100%;
         font-size: 14px;
         background: #fff;
-        border: 1px solid #ccc;
+        border: 0;
         border-radius: 3px;
         cursor: pointer;
         margin-bottom: 6px;
@@ -24,8 +24,6 @@
         resize: none;
         outline: none;
         z-index: 0;
-        box-shadow: 0px 1px 3px 0px rgba(50, 50, 50, 0.2);
-        transition: box-shadow 0.2s linear;
         transition: background 0.2s linear;
     }
 }
