--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -1,4 +1,6 @@
 $color-border: #ccc;
+$card-bg: #edeff0;
+$icon-close-color: #999999;
 
 .card, .card-info__title  {
     width: 100%;
@@ -14,9 +16,9 @@ $color-border: #ccc;
     z-index: 0;
     color: #4d4d4d;
     text-decoration: none;
-    transition: background 0.2s linear;
+    // transition: background 0.2s linear;
     &:hover {
-        background: #f3f4f5;
+        background: $card-bg;
         color: #4d4d4d;
         text-decoration: none;
         .edit-icon {
@@ -27,17 +29,35 @@ $color-border: #ccc;
     .card__wrap {
         box-sizing: border-box;
         .card_title {
-            padding: 8px;
+            padding: 5px 8px 6px;
         }
     }
-    .edit-icon {
-        color: rgb(110, 110, 110) !important;
-        height: 14px !important;
-        width: 20px !important;
-        position: absolute !important;
-        right: 10px !important;
-        top: 10px !important;
-        display: none !important;
+    .edit-icon__card {
+        visibility: hidden;
+        position: absolute;
+        top: 3px;
+        right: 3px;
+        font-size: 12px;
+        padding: 7px;
+        opacity: 0;
+        color: $icon-close-color;
+        background: $card-bg;
+        border-radius: 3px;
+        &:hover {
+            background: darken($card-bg, 10%);
+        }
+    }
+    .attachment-icon__card {
+        font-size: 16px;
+        transform: rotate(135deg);
+    }
+}
+.card {
+    &:hover {
+        .edit-icon__card {
+            visibility: visible;
+            opacity: 0.8;
+        }
     }
 }
 .card-info__title {
