--- a/client/src/components/Card/EditModal/editModal.scss
+++ b/client/src/components/Card/EditModal/editModal.scss
@@ -11,7 +11,7 @@
         position: absolute;
     }
     .edit-modal__title {
-        padding: 5px 8px 6px;
+        padding: 6px 8px;
         min-height: 80px;
         width: 100%;
         font-size: 14px;
