--- a/client/src/components/BoardPage/BoardButton/boardButton.scss
+++ b/client/src/components/BoardPage/BoardButton/boardButton.scss
@@ -4,11 +4,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 15px;
+    font-size: 14px;
     width: 100%;
     background: $bg-button-create;
     color: $color-button-create;
-
+    border-radius: 3px;
     &:hover {
         background: darken($bg-button-create, 5%);
         color: darken($color-button-create, 15%);
