--- a/client/src/components/Modal/modal.scss
+++ b/client/src/components/Modal/modal.scss
@@ -1,5 +1,4 @@
 $color-overlay: #000000;
-$bg-window: #edeff0;
 
 .modal-overlay {
     position: fixed;
@@ -15,17 +14,15 @@ $bg-window: #edeff0;
     z-index: 20;
     .modal-window {
         position: relative;
-        padding: 20px;
         min-width: 760px;
-        background: $bg-window;
-        border-radius: 2px;
         border-radius: 2px;
         overflow: hidden;
         z-index: 20;
         .modal-icon-close {
             position: absolute;
-            top: 3px;
-            right: 3px;
+            top: 0;
+            right: 0;
+            padding: 11px;
         }
     }
 }
