--- a/client/src/components/Icon/icon.scss
+++ b/client/src/components/Icon/icon.scss
@@ -12,4 +12,7 @@ $icon-attachment: #9da6ab;
     &-attachment {
         color: $icon-attachment;
     }
+    &-chat_bubble_outline {
+        color: $icon-attachment;
+    }
 }
