--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -51,6 +51,9 @@ $icon-close-color: #999999;
         font-size: 16px;
         transform: rotate(135deg);
     }
+    .comment-icon__card {
+        font-size: 15px;
+    }
 }
 .card {
     &:hover {
@@ -58,6 +61,10 @@ $icon-close-color: #999999;
             visibility: visible;
             opacity: 0.8;
         }
+    }
+    .badges-wrap {
+        display: flex;
+        flex-direction: row;
     }
 }
 .card-info__title {
