--- a/client/src/components/Card/components/Badge/Badge.scss
+++ b/client/src/components/Card/components/Badge/Badge.scss
@@ -1,11 +1,12 @@
 $items-color: #9da6ab;
 
-.badges {
+.badge {
     display: flex;
     align-items: center;
     padding: 0 3px;
-    .badges__items {
+    .badge__items {
         font-size: 12px;
+        font-weight: 300;
         margin-left: 3px;
         color: $items-color;
     }
