--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -5,9 +5,20 @@
     .logo-wrap {
         margin: 0 auto;
         display: block;
-        width: 80px;
+        // width: 80px;
         .logo {
             width: 100%;
+        }
+        &.logo-text {
+            font-size: 24px;
+            text-decoration: none;
+            color: #fff;
+            font-style: italic;
+            opacity: 0.7;
+            transition: opacity 0.15s linear;
+            &:hover {
+                opacity: 1;
+            }
         }
     }
     .nav {
