--- a/client/src/components/SignIn/signin.scss
+++ b/client/src/components/SignIn/signin.scss
@@ -1,6 +1,15 @@
 @import '../../assets/styles/variables.scss';
 @import '../../assets/styles/mixins.scss';
 
+.form-link {
+    color: #cdd2d4;
+    margin: 0 10px;
+    font-size: 20px;
+    letter-spacing: 1px;
+    &:hover {
+        color: #bbbbbb;
+    }
+}
 .auth-form-fieldset {
     margin-bottom: 0;
     .colorgraph {
