--- a/client/src/containers/App/app.scss
+++ b/client/src/containers/App/app.scss
@@ -32,12 +32,18 @@ body {
     height: 100%;
 }
 
+body {
+    &.modal-open {
+        overflow: hidden;
+    }
+}
+
 #app {
     .overlay {
         display: flex;
         align-items: center;
         height: 100vh;
-        background: rgba(0, 0, 0, 0.25);
+        background: rgba(0, 0, 0, 0.001);
         color: #fff;
     }
 }
@@ -66,10 +72,7 @@ body {
 
 .auth-form {
     padding: $main-gap;
-    background: $bg-primary;
     border-radius: 4px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 
-                0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .btn {
